Finalizando a primeira aula

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
-  <h1>Proffy</h1>
-  <p>Sua plataforma de estudos online</p>
 
-  <img src="src/images/landing.svg" alt="LogoProffy">
+  <div class="container">
+    <h1>Proffy</h1>
+    <p>Sua plataforma de estudos online</p>
+    <button>Estudar</button>
+    <button>Dar Aulas</button>
+  </div>
 
-  <button>Estudar</button>
-  <button>Dar Aulas</button>
 </body>
 
 </html>
