--- a/index.html
+++ b/index.html
@@ -4,20 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
+    rel="stylesheet">
 
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/partials/page-landing.css">
   <title>Proffy | Sua plataforma de estudos online</title>
 </head>
 
-<body>
+<body id="page-landing">
 
-  <div class="container">
-    <h1>Proffy</h1>
-    <p>Sua plataforma de estudos online</p>
-    <button>Estudar</button>
-    <button>Dar Aulas</button>
+  <div id="container">
+    <div class="logo-container">
+      <img src="src/images/logo.svg" alt="Proffy">
+      <h2>Sua plataforma de estudos online</h2>
+    </div>
+    <img class="hero-image" src="src/images/landing.svg" alt="Plataforma de estudos">
+
+    <div class="buttons-container">
+      <a class="study" href="/study.html">
+        <img src="src/images/icons/study.svg" alt="Estudar">
+        Estudar
+      </a>
+      <a class="give-classes" href="/give-classes.html">
+        <img src="src/images/icons/give-classes.svg" alt="Dar aulas">
+        Dar aulas
+      </a>
+    </div>
+
   </div>
 
 </body>
