--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
     rel="stylesheet">
+  <link rel="shortcut icon" href="src/images/favicon.png" type="image/x-icon">
 
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/partials/page-landing.css">
@@ -31,8 +32,12 @@
         <img src="src/images/icons/give-classes.svg" alt="Dar aulas">
         Dar aulas
       </a>
-    </div>
 
+    </div>
+    <p class="total-connections">
+      Total de 200 conexões já realizadas
+      <img src="src/images/icons/purple-heart.svg" alt="Coração roxo">
+    </p>
   </div>
 
 </body>
