--- a/Pages/study.html
+++ b/Pages/study.html
@@ -10,6 +10,8 @@
   <link rel="shortcut icon" href="/src/images/favicon.png" type="image/x-icon">
 
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="../styles/partials/forms.css">
+  <link rel="stylesheet" href="../styles/partials/header.css">
   <link rel="stylesheet" href="/styles/partials/page-study.css">
   <title>Proffy | Sua plataforma de estudos online</title>
 </head>
@@ -98,12 +100,15 @@
             alt="Diego Fernandes">
           <div>
             <strong>Diego Fernandes</strong>
-            <span>Química</span>
+            <span>Geografia</span>
           </div>
         </header>
-        <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório
-          e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas
-          explosões.</p>
+        <p>
+          As vezes não sei nem onde eu tô, mas consigo me localizar facilmente em qualquer lugar. Tenho memória
+          fotográfica e nunca fico perdido.
+          <br><br>Eu ensino a galera como não se perder na vida, com lições geográficas simples pra você nunca mais
+          precisar de mapa na sua bela vida.
+        </p>
         <footer>
           <p>Preço/hora <strong>R$20,00</strong></p>
           <button type="button">
