--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#8257E5">
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
     rel="stylesheet">
@@ -28,7 +29,7 @@
         <img src="src/images/icons/study.svg" alt="Estudar">
         Estudar
       </a>
-      <a class="give-classes" href="/give-classes.html">
+      <a class="give-classes" href="Pages/give-classes.html">
         <img src="src/images/icons/give-classes.svg" alt="Dar aulas">
         Dar aulas
       </a>
