--- a/Pages/give-classes.html
+++ b/Pages/give-classes.html
@@ -84,7 +84,79 @@
             <input name="cost" type="cost" id="cost" type="number" required>
           </div>
         </fieldset>
+
+        <fieldset>
+          <legend>Horários disponíveis
+            <button id="add-time">+ Novo Horário</button>
+          </legend>
+
+          <div class="schedule-item">
+
+            <div class="select-block">
+              <label for="weekday">Dia da semana</label>
+              <select name="weekday[]" required>
+                <option value="">Selecione uma opção</option>
+                <option value="0">Domingo</option>
+                <option value="1">Segunda-feira</option>
+                <option value="2">Terça-feira</option>
+                <option value="3">Quarta-feira</option>
+                <option value="4">Quinta-feira</option>
+                <option value="5">Sexta-feira</option>
+                <option value="6">Sábado</option>
+              </select>
+            </div>
+
+            <div class="input-block">
+              <label for="time_from">Das</label>
+              <input type="time" id="time_from" name="time_from[]" required>
+            </div>
+
+            <div class="input-block">
+              <label for="time_to">Ate</label>
+              <input type="time" id="time_to" name="time_to[]" required>
+            </div>
+
+          </div>
+
+          <div class="schedule-item">
+
+            <div class="select-block">
+              <label for="weekday">Dia da semana</label>
+              <select name="weekday[]" required>
+                <option value="">Selecione uma opção</option>
+                <option value="0">Domingo</option>
+                <option value="1">Segunda-feira</option>
+                <option value="2">Terça-feira</option>
+                <option value="3">Quarta-feira</option>
+                <option value="4">Quinta-feira</option>
+                <option value="5">Sexta-feira</option>
+                <option value="6">Sábado</option>
+              </select>
+            </div>
+
+            <div class="input-block">
+              <label for="time_from">Das</label>
+              <input type="time" id="time_from" name="time_from[]" required>
+            </div>
+
+            <div class="input-block">
+              <label for="time_to">Ate</label>
+              <input type="time" id="time_to" name="time_to[]" required>
+            </div>
+
+          </div>
+
+        </fieldset>
       </form>
+
+      <footer>
+        <p>
+          <img src="../src/images/icons/warning.svg" alt="Aviso importante">
+          Importante!<br>
+          Preencha todos os dados
+        </p>
+        <button type="submit" form="create-class">Salvar cadastro</button>
+      </footer>
     </main>
 
   </div>
