--- a/Pages/give-classes.html
+++ b/Pages/give-classes.html
@@ -87,36 +87,8 @@
 
         <fieldset id="schedule-items">
           <legend>Horários disponíveis
-            <button id="add-time">+ Novo Horário</button>
+            <button type="button" id="add-time">+ Novo Horário</button>
           </legend>
-
-          <div class="schedule-item">
-
-            <div class="select-block">
-              <label for="weekday">Dia da semana</label>
-              <select name="weekday[]" required>
-                <option value="">Selecione uma opção</option>
-                <option value="0">Domingo</option>
-                <option value="1">Segunda-feira</option>
-                <option value="2">Terça-feira</option>
-                <option value="3">Quarta-feira</option>
-                <option value="4">Quinta-feira</option>
-                <option value="5">Sexta-feira</option>
-                <option value="6">Sábado</option>
-              </select>
-            </div>
-
-            <div class="input-block">
-              <label for="time_from">Das</label>
-              <input type="time" id="time_from" name="time_from[]" required>
-            </div>
-
-            <div class="input-block">
-              <label for="time_to">Ate</label>
-              <input type="time" id="time_to" name="time_to[]" required>
-            </div>
-
-          </div>
 
           <div class="schedule-item">
 
@@ -161,6 +133,6 @@
 
   </div>
 
+  <script src="../scripts/addField.js"></script>
 </body>
-
 </html>
